# PYTHON-Agent-MCP

./: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
buissnes_agent/: DataLoaderLocalFileLoader.py  DataLoaderS3FileLoader.py  DataLoaderS3Service.py  InitialConfig.py  KnowledgeBaseIngestion.py  KnowledgebasePipeline.py  LocalFileLoader.py  MCPServer.py  MetadataModels.py  QdrantDatabaseStore.py  README.md  S3FileLoader.py  SearchKnowledgebase.py  chunking_base.py  chunking_lang_graph.py  chunking_s3.py  config.py  config_loader.py  docker-compose.yml  iso_server.py  requirements.txt  s3_service.py  vector_store.py
buissnes_agent/a2a_agent/: __main__.py  agent.py  agent_executor.py  default_config.json  patch_pydantic.py  test_client.py
buissnes_agent/inputs/ISO20022/: test_kanarek.txt
buissnes_agent/inputs/business/General/: www.iso20022payments.com_.md  www.iso20022payments.com_author_ryllpawel_ihm8l2qk_.md  www.iso20022payments.com_cartoons_.md  www.iso20022payments.com_cbpr_.md  (+46 more)
buissnes_agent/textchunker/: ContentChunker.py  LangChainChunker.py  NoLibChunker.py  chunking_base.py
buissnes_agent/textchunker/langchain/: LangChainChunker.py  base.py
buissnes_agent/textchunker/noLibChunker/: NoLibChunker.py  base.py
buissnes_agent/tools/: tool_confluence.py  tool_iso_rag.py  tool_wikipedia.py
client/: client_for_MCP_test.py  load_data_s3.py
config/: default.yaml  dev.yaml
docs/langfuse/: llms.txt
docs/pydantic.dev/: llms.txt
testscripts/: test_script_client_for_MCP.py  test_script_load_data_s3.py  test_script_view_entries.py
(+10 files in other folders)
