[project]
name = "PYTHON-Agent-MCP"
version = "0.1.0"
description = "PYTHON Agent MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.7",
    "fastmcp>=2.14.4",
    "httpx>=0.28.1",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "mcp[cli]>=1.26.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pypdf>=6.6.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "scipy>=1.17.0",
    "sse-starlette>=3.2.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
